--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -16,7 +16,7 @@
                 <input type="text" name="userid" placeholder="user id" maxlength="25" required>
                 <input type="password" name="password" maxlength="25" placeholder="password" required>
                 <br>
-                <button id="login">login</button>
+                <input type="button" id="login" onclick="loginUser()" value="login"></button>
             </form>
 
             <h6>don't have an account?</h6>
