--- a/public/stylesheets/NotAWebApp.css
+++ b/public/stylesheets/NotAWebApp.css
@@ -1,31 +1,32 @@
 body {
     margin: 0;
 }
-
 h1 {
     text-align: center;
     margin: 20px 20px 0 20px;
 }
-
-h2 {
+/*h2 {
     background-color: lightgrey;
     position: absolute;
     width: 90%;
-    height: 300px;
+    height: 300px; change?
     padding: 50px;
     margin: 20px;
+}*/
+.jumbotron {
+    position: absolute;
+    width: 90%;
+    margin: 20px;
 }
-
 #topRight {
     background-color: darkgrey;
     position: absolute;
-    right: 0px;
+    right: 9%;  /*get this to match up*/
     width: 10%;
-    height: 150px;
+    height: 25%;
     padding: 15px 40px 30px 15px;
-    margin: 20px 17px 20px 20px;
+    /*margin: 20px 17px 20px 20px;*/
 }
-
 .timer {
     background-color: lightgrey;
     width: 30%;
@@ -34,23 +35,25 @@ h2 {
     font-size: 40px;
     margin: 0;
 }
-
-.nextGame {}
-
+.nextGame {
+    
+}
 .usersOnline {
     background-color: lightgrey;
     border-radius: 25px;
     width: 30%;
     padding: 10px;
 }
-
-.chat {}
-
+.chat {
+    background-color: lightgrey;
+    border-radius: 25px;
+    height: 300px;
+    padding: 10px;
+}
 .currentScore {
     text-align: center;
 }
-
 .container {
     position: relative;
-    margin: 325px 10px 50px 20px;
+    margin: 325px 0px 0px 0px;
 }
