--- a/views/pages/NotAWebApp.html
+++ b/views/pages/NotAWebApp.html
@@ -2,15 +2,17 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <title>Not A Web App</title>
         <link rel="stylesheet" href="NotAWebApp.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
     <body>
+        <script src="NotAWebApp.js"></script>
+
         <h1>Title of Game</h1>
-        <div class="jumbotron">
-            <h2> </h2>
-        </div>
+        <button class="logout">Logout</button>
+        <h2> </h2>
         
         <p id="topRight">Current Location: # <br>
             Goal: # <br>
@@ -25,7 +27,8 @@
                     <p class="usersOnline">Users Online</p>
                 </div>
                 <div class="col-sm-8">
-                    <p class="chat">Chat Box</p>
+                    <p>Chat Box</p>
+                    <input type="text" class="chat" placeholder="Type here to chat">
                 </div>
             </div>
         </div>
