Button bug fixed

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -25,6 +25,14 @@
 
 
     </div>
+
 </body>
+<script>
+    //Login user
+    function loginUser() {
+        document.getElementById('login-form').action = '/login';
+        document.getElementById('login-form').submit();
+    }
+</script>
 
 </html>
