--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -25,6 +25,14 @@
 
 
     </div>
+
 </body>
+<script>
+    //Add new user
+    function signupUser() {
+        document.getElementById('signup-form').action = '/signup';
+        document.getElementById('signup-form').submit();
+    }
+</script>
 
 </html>
