--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -12,11 +12,11 @@
             <h3 id="title">Not A Web App</h3>
 
             <br>
-            <form id="signup-form" action="/signup" method="post">
-                <input type="text" name="userid" placeholder="user id" maxlength="25" required>
-                <input type="password" name="password" placeholder="password" maxlength="25" required>
+            <form method="POST" id="signUpForm">
+                <input type="text" name='userid' placeholder="user id" maxlength="25" required>
+                <input type="password" name='password' placeholder="password" maxlength="25" required>
                 <br>
-                <input type="button" id="signup" onclick="signupUser()" value="sign up"></button>
+                <input type="button" id="signup" onclick="signUpUser()" value="sign up"></button>
             </form>
 
             <h6>already have an account?</h6>
@@ -25,14 +25,13 @@
 
 
     </div>
-
+    <script>
+        //Add new user
+        function signUpUser() {
+            document.getElementById('signUpForm').action = '/signup';
+            document.getElementById('signUpForm').submit();
+        }
+    </script>
 </body>
-<script>
-    //Add new user
-    function signupUser() {
-        document.getElementById('signup-form').action = '/signup';
-        document.getElementById('signup-form').submit();
-    }
-</script>
 
 </html>
