Fix main menu links

--- a/views/pages/mainmenu.ejs
+++ b/views/pages/mainmenu.ejs
@@ -14,7 +14,7 @@
             <h5 id="username">username</h5>
             
             
-            <button id="button1" value="b1" onclick="window.location.href = 'NotAWebApp';">New Game</button>
+            <button id="button1" value="b1" onclick="window.location.href = 'main';">New Game</button>
             <br>
             <button id="button2" value="b2" onclick="window.location.href = 'underconstruction';">Achievements</button>
             <br>
