Fix under construction's back link

--- a/views/pages/underconstruction.ejs
+++ b/views/pages/underconstruction.ejs
@@ -11,7 +11,7 @@
         <div id="header">
             <h3 id="title">Under Construction</h3>
             <h5 id="username">nothing to see here :(</h5>
-            <button id="button1" onclick="location.href='mainmenu.html'" value="b1">go back?</button>            
+            <button id="button1" value="b1" onclick="window.location.href = 'menu';">go back?</button>            
         </div>
 
 
