--- a/views/pages/mainmenu.ejs
+++ b/views/pages/mainmenu.ejs
@@ -9,9 +9,11 @@
     <div id="container">
 
             <h3 id="title">Welcome Back,</h3>
-        
-             <!-- in case we have time for user picture<div id="ppbox"></div> -->
-            <h5 id="username">username</h5>
+            <% rows.forEach((r) => { %>
+            <!-- in case we have time for user picture<div id="ppbox"></div> -->
+            <h5 id="username"><%= r.userid %></h5>
+            <%}); %>
+             
             
             
             <button id="button1" value="b1" onclick="window.location.href = 'main';">New Game</button>
