how long can a human survive without sleep

--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -18,7 +18,7 @@
                 <br>
                 <input type="button" id="signup" onclick="signUpUser()" value="sign up"></button>
             </form>
-
+            <h5 id="msg"></h5>
             <h6>already have an account?</h6>
             <a href="login"> >> Login << </a>
         </div>
