--- a/public/stylesheets/frontpage.css
+++ b/public/stylesheets/frontpage.css
@@ -1,8 +1,6 @@
 body {
     background: url(/slightblur.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background-repeat: no-repeat;
     background-size: cover;
     color: rgb(69, 72, 76);
     margin-top: 0px;
