free hong kong I guess

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -18,7 +18,7 @@
                 <br>
                 <input type="button" id="login" onclick="loginUser()" value="login"></button>
             </form>
-
+            <h5 id="msg"></h5>
             <h6>don't have an account?</h6>
             <a href="signup"> >> Sign Up << </a>
         </div>
