--- a/views/pages/mainmenu.ejs
+++ b/views/pages/mainmenu.ejs
@@ -16,19 +16,17 @@
             
             <button id="button1" value="b1" onclick="window.location.href = 'main';">New Game</button>
             <br>
-            <button id="button2" value="b2" onclick="window.location.href = 'underconstruction';">Achievements</button>
+            <button id="button2" value="b2" onclick="window.location.href = 'howto';">How To Play</button>
             <br>
-            <button id="button3" value="b3" onclick="window.location.href = 'underconstruction';">Continue</button>
+            <button id="button3" value="b3" onclick="window.location.href = 'underconstruction';">High Score</button>
             <br>
-            <button id="button4" value="b4" onclick="window.location.href = 'underconstruction';">Settings</button>
+            <button id="button4" value="b4" onclick="window.location.href = 'underconstruction';">Reviews</button>
             <br>
-            <button id="button5" value="b5" onclick="window.location.href = 'underconstruction';">Exit</button>
+            <button id="button5" value="b5" onclick="window.location.href = 'login';">Log Off</button>
             <br>
             <button id="button6" value="b6" onclick="window.location.href = 'underconstruction';">SOMETHING</button>
             <br>
             
-        
-        
     </div>
      <p>image credit: tokyoluv@instagram</p>
 </body>
