--- a/public/stylesheets/howto.css
+++ b/public/stylesheets/howto.css
@@ -1,5 +1,5 @@
 body        { 
-                background: url(play.jpg);
+                background: url(/play.jpg);
                 background-repeat: no-repeat;
                 background-size: 100%;
                 color: rgb(69, 72, 76); 
