Add report bug page

--- a/views/pages/mainmenu.ejs
+++ b/views/pages/mainmenu.ejs
@@ -24,7 +24,7 @@
             <br>
             <button id="button5" value="b5" onclick="window.location.href = 'login';">Log Off</button>
             <br>
-            <button id="button6" value="b6" onclick="window.location.href = 'underconstruction';">SOMETHING</button>
+            <button id="button6" value="b6" onclick="window.location.href = 'reportbug';">Report Bug</button>
             <br>
             
     </div>
